syntax ="proto3";

package pb;

import "user.proto";

option go_package="github.com/ahmadstarving/grpcdemo/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string session_id = 2;
}